<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message_logged_in" />
    
    <Button 
        android:id="@+id/go_to_friend_from_logged"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_go_to_friend" />
    
    <Button 
        android:id="@+id/go_to_inputschedule_from_logged"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_go_to_inputschedule" />
    
    <Button 
        android:id="@+id/go_to_schedule_from_logged"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_go_to_schedule" />
    
    <TextView
        android:id="@+id/menu_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_menu" />

</LinearLayout>